# demoji-rs

./: Cargo.toml  LICENCE.txt  README.md
examples/: simple_tweet.rs
src/: emoji_map.in  lib.rs
