[package]
name = "demoji-rs"
version = "0.1.0"
edition = "2021"
description = "demoji implementation for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
regex = "1.8.1"
unicode-segmentation = "1.10.1"
